--- a/Lab9/Lab9.csproj
+++ b/Lab9/Lab9.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Diapason.cs" />
+    <Compile Include="DiapasonArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
